# codex-acp

./: .gitignore  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  quick-check.yml  release.yml
npm/: README.md  package.json
npm/publish/: create-platform-packages.sh  update-base-package.sh
npm/template/: package.json
npm/testing/: test-platform-detection.js  validate.sh
script/: sign-mac  sign-windows.ps1
src/: cli.rs  codex_agent.rs  command_executor.rs  conversation.rs  lib.rs  local_spawner.rs  main.rs  mcp_http.rs  mode_overrides.rs  pricing.rs  prompt_args.rs  session_mode_store.rs  session_store.rs  thread.rs  tool_executor.rs
