[package]
name = "codex-acp"
version = "0.6.1"
edition = "2024"
authors = ["Zed <hi@zed.dev>"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent powered by Codex"
repository = "https://github.com/zed-industries/codex-acp"
homepage = "https://github.com/zed-industries/codex-acp"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.9.0", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
clap = "4"
codex-apply-patch = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-arg0 = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-common = { git = "https://github.com/zed-industries/codex", branch = "acp", features = ["cli"] }
codex-core = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-mcp-server = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-protocol = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-login = { git = "https://github.com/zed-industries/codex", branch = "acp" }
itertools = "0.14.0"
mcp-types = { git = "https://github.com/zed-industries/codex", branch = "acp" }
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"
