[package]
name = "codex-acp"
version = "0.9.3"
edition = "2024"
authors = ["Zed <hi@zed.dev>"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent powered by Codex"
repository = "https://github.com/zed-industries/codex-acp"
homepage = "https://github.com/zed-industries/codex-acp"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.9.4", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
clap = "4"
codex-apply-patch = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-arg0 = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-core = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-mcp-server = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-protocol = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-login = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-utils-approval-presets = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-utils-cli = { git = "https://github.com/zed-industries/codex", branch = "acp" }
itertools = "0.14.0"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
heck = "0.5.0"
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
