[package]
name = "codex-acp"
version = "0.12.0"
edition = "2024"
authors = ["Zed <hi@zed.dev>"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent powered by Codex"
repository = "https://github.com/zed-industries/codex-acp"
homepage = "https://github.com/zed-industries/codex-acp"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
doctest = false
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.11.1", features = ["unstable"] }
anyhow = "1"
clap = "4"
codex-apply-patch = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-arg0 = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-config = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-core = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-exec-server = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-mcp-server = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-models-manager = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-login = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-shell-command = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-utils-approval-presets = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-utils-cli = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
diffy = "0.4.2"
# Pin gix-actor to 0.40.0 because 0.40.1 bumped winnow to 1.0 in what is
# technically a patch release, which makes it incompatible with gix-object
# 0.58.0 (reached transitively via gix 0.81.0 -> codex-git-utils). Both crates
# expose winnow types in their public APIs, so they must agree on the winnow
# major version. Remove this pin once gix-object publishes a release compatible
# with winnow 1.0 and the rest of the gix stack has picked it up.
gix-actor = "=0.40.0"
# Pin icu_calendar to 2.1.x because 2.2.x broke API compatibility with
# temporal_rs 0.1.2, which is transitively required by
# codex-code-mode -> v8 146.4.0 -> temporal_capi 0.1.2 -> temporal_rs ^0.1.2.
# See https://github.com/boa-dev/temporal/issues/703
icu_calendar = "~2.1"
itertools = "0.14.0"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
# codex-cli depends on codex-tui, which enables serde_json/preserve_order; match
# that behavior here because it affects MCP keychain account hashing.
serde_json = { version = "1", features = ["preserve_order"] }
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
heck = "0.5.0"
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
